--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "@fortawesome/react-fontawesome": "^3.0.0",
     "decap-cms-app": "^3.8.3",
     "gray-matter": "^4.0.3",
-    "next": "15.5.0",
+    "next": "^15.5.9",
     "next-i18next": "^15.4.2",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "19.2.1",
+    "react-dom": "19.2.1",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1"
   },
